Fixed lastnames of authors.

--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,11 @@
   "homepage": "https://github.com/EDAURU/doc-4-js",
   "authors": [
     "Alberto Bonsanto",
-    "Andres ortega",
+    "Andres Ortega",
     "Lascario Pacheco",
-    "Jubert Perez",
+    "Jubert Pérez",
     "Jonh Jordan",
-    "Orangel Marquez",
+    "Orangel Márquez",
     "Rainier Araujo"
   ],
   "keywords": [
